# openscreen

./: ROADMAP.md  electron-builder.json5  opencode.json  package.json
.github/scripts/: discord-release-announce.mjs
.github/workflows/: discord.yaml  prerelease.yml  promote.yml
design/: openscreen-editor-v2.html
docs/: secrets.md
docs/architecture/: ai-edition-roadmap.md
docs/engineering/: stt-ctranslate2-implementation-status.md  transcription-engine-migration.md
electron/: electron-env.d.ts  main.ts  preload.ts
electron/ai-edition/: chat-service.toolloop.test.ts  chat-service.ts
electron/ipc/: handlers.ts  nativeBridge.ts
electron/native-bridge/services/: aiEditionService.ts
electron/native/ctranslate2-server/: CMakeLists.txt
electron/native/ctranslate2-server/include/: mel.h  wav.h
electron/native/ctranslate2-server/src/: main.cpp
electron/native/models/wav2vec2-base-960h/: config.json  vocab.json
electron/stt/: ctranslate2Server.ts  forcedAlignment.test.ts  forcedAlignment.ts  gpuDetector.test.ts  gpuDetector.ts  index.test.ts  index.ts  modelManager.test.ts  modelManager.ts  transcriptionContract.ts  whisperServer.test.ts  whisperServer.ts
scripts/: build-ctranslate2-server.sh  e2e-align-smoke.mjs  e2e-align-smoke.py  e2e-pipeline-smoke.mjs  e2e-stt-smoke.mjs  export-wav2vec2-onnx.py
src/components/ai-edition/: Bottombar.tsx  LeftPanel.tsx  NewEditorShell.module.css  NewEditorShell.tsx  Preview.tsx  PreviewCanvas.tsx  RightPanelStack.tsx  RightPanes.tsx  TimelinePane.module.css  TimelinePane.tsx  VirtualPreview.tsx  WebcamOverlay.tsx
src/components/launch/: NotesWindow.tsx
src/components/video-editor/: SettingsPanel.tsx  VideoEditor.tsx
src/components/video-editor/timeline/: BackgroundWaveform.tsx
src/hooks/: useScreenRecorder.ts
src/i18n/__tests__/: tutorialHelpTranslations.test.ts
src/i18n/locales/ar/: settings.json
src/i18n/locales/es/: settings.json
src/i18n/locales/fr/: settings.json
src/i18n/locales/ja-JP/: settings.json
src/i18n/locales/ko-KR/: settings.json
src/i18n/locales/ru/: settings.json
src/i18n/locales/tr/: settings.json
src/i18n/locales/vi/: settings.json
src/i18n/locales/zh-CN/: settings.json
src/i18n/locales/zh-TW/: settings.json
src/lib/: compositeLayout.test.ts  compositeLayout.ts
src/lib/ai-edition/store/: useTimeline.ts
src/lib/ai-edition/timeline/: aggregated-transcript.test.ts  aggregated-transcript.ts
src/lib/captioning/: transcribe.test.ts  transcribe.ts
src/lib/exporter/: index.ts  videoDimensions.test.ts  videoDimensions.ts
src/native/: browserShim.ts  contracts.ts
